# lh2_on_rp2040

./: .gitignore  CMakeLists.txt  README.md  main.c  ts4231_capture.pio
debug/: .gdbinit  lfsr_search_pp.py
lh2/: lh2.c  lh2.h
scripts/: checkpoint_collision.py  generate_lfsr_search_test_vectors.py  generate_polynomial_checkpoint.m  generate_polynomial_checkpoints.py  generate_test_lfsr_sequences.py  lfsr_checkpoint_list.py  lh2_checkpoints.h
src/: main.c  ts4231_capture.pio
src/lh2/: CMakeLists.txt  lh2.c  lh2.h  lh2_checkpoints.h  lh2_decoder.c  lh2_decoder.h  ts4231_capture.pio
test/: CMakeLists.txt  lh2_lfsr_search_test_vectors.h  test_lh2.c  test_lh2_determine_polynomial.c
